examples/test/testpolicy15944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15944
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key14: value46
      key27: value6
      key39: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value0
          key41: value34
      podSelector:
        matchLabels:
          key18: value28
